Dark Mode issue resolved and client request done

--- a/styles/home.css
+++ b/styles/home.css
@@ -9,7 +9,12 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
   }
+
+  html {
+    color-scheme: only light;
+  }
   
+
 .heading-robonto{
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
